<resources>
    <string name="app_name">Routine Tracker</string>

    <string name="add">add</string>
    <string name="my_tasks">My Tasks</string>
    <string name="save_button">Save</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="add_details">Add details</string>
    <string name="date_text">Date</string>
    <string name="new_task">New task</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_all_completed_tasks">Delete all completed tasks</string>
    <string name="you_did_it">You did it!</string>
    <string name="enter_list_title">Enter list title</string>
    <string name="create_new_list">Create new list</string>
    <string name="done">Done</string>
    <string name="dark_theme">Dark theme</string>
    <string name="default_list_cant_be_deleted">Default list can\'t be deleted</string>
    <string name="a_fresh_start">A fresh start</string>
    <string name="anything_to_add">Anything to add?</string>
    <string name="completed">Completed</string>
    <string name="task_were_undoned">Task were been undone</string>
    <string name="no_completed_tasks_yet">No completed tasks yet</string>
</resources>
