<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="buttomMenuViewModel"
            type="com.oleksii.routinetracker.bottommenu.BottomMenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rename_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/noto_sans"
            android:text="@string/rename_list"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delete_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/noto_sans"
            android:text="@string/delete_list"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:enabled="@{buttomMenuViewModel.deleteListButtonEnable}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rename_list" />

        <TextView
            android:id="@+id/delete_completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/noto_sans"
            android:text="@string/delete_all_completed_tasks"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>