<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="createTaskViewModel"
            type="com.oleksii.routinetracker.createtask.CreateTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:ems="17"
            android:hint="@string/new_task"
            android:inputType="text"
            android:fontFamily="@font/noto_sans"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/details_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:tint="@color/colorBlue500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_details"
            app:srcCompat="@drawable/more_details" />

        <ImageView
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:tint="@color/colorBlue500"
            app:layout_constraintBottom_toBottomOf="@+id/details_add"
            app:layout_constraintStart_toEndOf="@+id/details_add"
            app:layout_constraintTop_toTopOf="@+id/details_add"
            app:srcCompat="@drawable/date_ico" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/noto_sans"
            android:text="@string/save_button"
            android:textColor="@color/colorBlue500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/details_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_add" />

        <EditText
            android:id="@+id/add_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/add_details"
            android:inputType="text"
            android:textSize="17sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_title"
            android:autofillHints="" />

        <TextView
            android:id="@+id/date_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/date_picker"
            app:layout_constraintStart_toEndOf="@+id/date_picker"
            app:layout_constraintTop_toTopOf="@+id/date_picker"
            tools:text="Fri, 13 Nov" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>