<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close_30dp" />

        <TextView
            android:id="@+id/create_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/create_new_list"
            android:textColor="@color/colorBlack"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_action"
            app:layout_constraintStart_toEndOf="@+id/cancel_action"
            app:layout_constraintTop_toTopOf="@+id/cancel_action" />

        <Button
            android:id="@+id/done_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_transparent_button"
            android:fontFamily="@font/noto_sans"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/colorBlue500"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/create_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGray700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel_action"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/enter_list_title"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line"
            tools:text="@string/enter_list_title" />

        <View
            android:id="@+id/second_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGray700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_title" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorGray300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_line"
            android:orientation="vertical" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>