<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="editTaskViewModel"
            type="com.oleksii.routinetracker.edittask.EditTaskViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/new_task_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/deleteTask"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delete_bin" />

            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/arrow_back_black" />

            <EditText
                android:id="@+id/editTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/enter_your_task"
                android:inputType="textPersonName"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/arrowBack"
                app:taskTitle="@{editTaskViewModel.task}" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTask"
                app:srcCompat="@drawable/more_details" />

            <EditText
                android:id="@+id/addDetails"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/add_details"
                android:inputType="textPersonName"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:taskDetails="@{editTaskViewModel.task}" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/date_ico" />

            <EditText
                android:id="@+id/editDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/date_text"
                android:inputType="date"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:taskDate="@{editTaskViewModel.task}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>